# Usage-Report

./: .gitignore  README.md  pyproject.toml
tests/: test_api.py  test_cli.py  test_database.py  test_debug_option.py  test_groups.py  test_plotting.py  test_report.py  test_slurm.py  test_sreport.py
usage_report/: __init__.py  api.py  cli.py  database.py  groups.py  plotting.py  report.py  slurm.py  sreport.py
