[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usage-report"
version = "0.1.0"
description = "Utilities to fetch usage information from LRZ SIM API"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Unknown", email = "unknown@example.com"}
]
dependencies = []

[project.scripts]
usage-report = "usage_report.cli:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "-ra"
